# ogma

./: .gitignore  LICENSE  README.markdown  pyproject.toml
ogma/: __init__.py  __main__.py  codegen.py  main.py
ogma/commands/: __init__.py  common.py  enumtables.py  enumusage.py  generate.py
ogma/modelutils/: __init__.py  sqlalchemywrappers.py  stored_procedures.py  validation.py  value_holder.py
ogma/templates/: generated_annotation.mustache  generated_header.mustache  java_enum.mustache  java_enum_converter.mustache  jooq_generator_config.mustache
ogma/utils/: __init__.py
tests/: test_ogma.py
