[tool.poetry]
name = "ogma"
version = "0.1.0"
description = "Ogma: A database access code generator for Java"
authors = ["Jacobo de Vera <devel@jacobodevera.com>"]
license = "MIT"
readme = "README.markdown"
homepage = "https://www.github.com/jdevera/ogma"
classifiers = [
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
    "Topic :: Database",
    "Programming Language :: SQL",
    "Programming Language :: Java",
    "Intended Audience :: Developers",
    ]
include = ["*.mustache"]

[tool.poetry.scripts]
ogma = "ogma:main"

[tool.poetry.dependencies]
python = "^3.6"
SQLAlchemy = "~1.3"
PyMySQL = "~0.9"
argcomplete = "~1.10"
colorama = "~0.4"
colored = "~1.3"
pystache = "~0.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
colored-traceback = "*"
invoke = "^1"
black = { version = "*", allows-prereleases=true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
